tests/error/tracing_errors/generic_load.err
Error: Error in comptime function return (at $FILE:14:0)
   | 
12 | 
13 | @guppy.comptime
14 | def main() -> Callable[[int], int]:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
15 |     return generic_func
   | ^^^^^^^^^^^^^^^^^^^^^^^

Using the generic function `generic_func` as higher-order values is not
supported

Guppy compilation failed due to 1 previous error
